# AgentVine

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  claude.md  docker-compose.yml
.claude/agents/: python-pro.md  react-specialist.md
agents/: python-pro.md
backend/: .env.example  ARCHITECTURE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run.sh
backend/alembic/: env.py
backend/alembic/versions/: c42dbd5e318c_initial_database_schema.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  redis.py
backend/app/database/: __init__.py  session.py
backend/app/models/: __init__.py  chat_message.py  execution.py  responses.py  session.py  task.py  work_order.py  worker.py
backend/app/routers/: __init__.py  about.py  chat.py  health.py  queue.py  sessions.py  tasks.py  workers.py
backend/app/schemas/: __init__.py  chat.py  queue.py  session.py  task.py  worker.py
backend/app/services/: __init__.py  orchestrator.py  queue_manager.py
backend/tests/: __init__.py  test_about.py  test_health.py
docs/: PHASE1_PLAN.md  PHASE1_TASKS.md
docs/api/: API_DESIGN.md
docs/architecture/: DATABASE_SCHEMA.md  SYSTEM_ARCHITECTURE.md
docs/design/: CONTROLLER.md  FRONTEND.md  QUEUE_SYSTEM.md  WORKER_SYSTEM.md
docs/tasks/: IMPLEMENTATION_TASKS.md
frontend/: .env.example  Dockerfile  README.md  SUMMARY.md  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Navigation.tsx
frontend/src/pages/: About.tsx  Chat.tsx  Dashboard.tsx  Home.tsx  Sessions.tsx  Tasks.tsx  Workers.tsx
workers/: Dockerfile  __init__.py  main.py  pyproject.toml
workers/base/: __init__.py  api_client.py  config.py  worker.py
