[project]
name = "agentvine-workers"
version = "0.0.1"
description = "AgentVine worker system"
authors = [
    {name = "AgentVine Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workers"]
